@@ -41,13 +41,13 @@ import pascal.taie.language.type.Type;
 import pascal.taie.util.collection.IndexerBitSet;
 import pascal.taie.util.collection.Maps;
 import pascal.taie.util.collection.MultiMap;
+import pascal.taie.util.collection.Sets;
 
 import javax.annotation.Nullable;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Deque;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -133,15 +133,15 @@ class PFGBuilder {
     }
 
     private Set<VarNode> obtainOutNodes() {
-        Set<JMethod> outMethods = new HashSet<>(obtainMethods());
+        Set<JMethod> outMethods = Sets.newSet(obtainMethods());
         // OUT methods of inner classes and special access$ methods
         // are also considered as the OUT methods of current type
-        pce.PCEMethodsOf(type)
+        pce.pceMethodsOf(type)
                 .stream()
                 .filter(m -> !m.isPrivate() && !m.isStatic())
                 .filter(m -> isInnerClass(m.getDeclaringClass()))
                 .forEach(outMethods::add);
-        pce.PCEMethodsOf(type)
+        pce.pceMethodsOf(type)
                 .stream()
                 .filter(m -> !m.isPrivate() && m.isStatic())
                 .filter(m -> m.getDeclaringClass().getType().equals(type)
@@ -216,7 +216,7 @@ class PFGBuilder {
                         // Optimization: filter out some potential spurious flows due to
                         // the imprecision of context-insensitive pre-analysis, which
                         // helps improve the performance of Zipper and pointer analysis.
-                        if (pce.PCEMethodsOf(type).contains(toVar.getMethod())) {
+                        if (pce.pceMethodsOf(type).contains(toVar.getMethod())) {
                             nextEdges.add(edge);
                         }
                     }
@@ -251,7 +251,7 @@ class PFGBuilder {
                             // Optimization: filter out some potential spurious flows due to
                             // the imprecision of context-insensitive pre-analysis, which
                             // helps improve the performance of Zipper and pointer analysis.
-                            if (pce.PCEMethodsOf(type).contains(toVar.getMethod())) {
+                            if (pce.pceMethodsOf(type).contains(toVar.getMethod())) {
                                 nextEdges.add(edge);
                             }
                         } else if (edge instanceof UnwrappedFlowEdge) {
@@ -270,7 +270,7 @@ class PFGBuilder {
     public Set<FlowEdge> getOutEdgesOf(Node node) {
         Set<FlowEdge> outEdges = ofg.getOutEdgesOf(node);
         if (wuEdges.containsKey(node)) {
-            outEdges = new HashSet<>(outEdges);
+            outEdges = Sets.newSet(outEdges);
             outEdges.addAll(wuEdges.get(node));
         }
         return outEdges;
@@ -290,6 +290,6 @@ class PFGBuilder {
                 .stream()
                 .map(Invoke::getLValue)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
